--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,9 +1,9 @@
 schema_version = "1.0.0"
 
-id = "auto_hide_overlays"
-version = "5.1.0"
-name = "Auto Hide Overlays"
-tagline = "Hides overlays during transforms"
+id = "pataz_auto_hide_overlays"
+version = "5.1.1"
+name = "Pataz Auto Hide Overlays"
+tagline = "Hides overlays during transform"
 maintainer = "Daniel Salazar"
 type = "add-on"
 
